<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_rate"
        android:textSize="18sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tv_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep"
        android:textSize="18sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tv_spo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spo2"
        android:textSize="18sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textSize="18sp"
        android:padding="8dp"/>
</LinearLayout>
